--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#0052CC",
   "icons": [
     {
-      "src": "icon-192.png",
-      "sizes": "192x192",
+      "src": "icon.png",
+      "sizes": "172x115",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
+      "src": "splash.png",
+      "sizes": "200x200",
       "type": "image/png"
     }
   ]
